m3d.h

    typedef uint32_t M3D_INDEX;
    typedef uint16_t M3D_VOXEL;
    typedef uint16_t M3D_INDEX;
    typedef uint8_t M3D_VOXEL;
    /* material property */
    typedef struct
    {
        uint8_t type; /* property type, see "m3dp_*" enumeration */
        union
        {
            uint32_t color;      /* if value is a color, m3dpf_color */
            uint32_t num;        /* if value is a number, m3dpf_uint8, m3pf_uint16, m3dpf_uint32 */
            float fnum;          /* if value is a floating point number, m3dpf_float */
            M3D_INDEX textureid; /* if value is a texture, m3dpf_map */
        } value;
    } m3dp_t;
    /* material entry */
    typedef struct
    {
        char *name;      /* name of the material */
        uint8_t numprop; /* number of properties */
        m3dp_t *prop;    /* properties array */
    } m3dm_t;
    /* face entry */
    typedef struct
    {
        M3D_INDEX materialid;  /* material index */
        M3D_INDEX vertex[3];   /* 3D points of the triangle in CCW order */
        M3D_INDEX normal[3];   /* normal vectors */
        M3D_INDEX texcoord[3]; /* UV coordinates */
#ifdef M3D_VERTEXMAX
        M3D_INDEX paramid;    /* parameter index */
        M3D_INDEX vertmax[3]; /* maximum 3D points of the triangle in CCW order */
#endif
    } m3df_t;
    typedef struct
    {
        uint16_t count;
        char *name;
    } m3dvi_t;
    /* voxel types (voxel palette) */
    typedef struct
    {
        char *name;           /* technical name of the voxel */
        uint8_t rotation;     /* rotation info */
        uint16_t voxshape;    /* voxel shape */
        M3D_INDEX materialid; /* material index */
        uint32_t color;       /* default voxel color */
        M3D_INDEX skinid;     /* skin index */
        uint8_t numitem;      /* number of sub-voxels */
        m3dvi_t *item;        /* list of sub-voxels */
    } m3dvt_t;
    /* voxel data blocks */
    typedef struct
    {
        char *name;        /* name of the block */
        int32_t x, y, z;   /* position */
        uint32_t w, h, d;  /* dimension */
        uint8_t uncertain; /* probability */
        uint8_t groupid;   /* block group id */
        M3D_VOXEL *data;   /* voxel data, indices to voxel type */
    } m3dvx_t;