src/bindings.rs

#[test]
fn bindgen_test_layout_m3dm_t() {
    assert_eq!(
        ::std::mem::size_of::<m3dm_t>(),
        24usize,
        concat!("Size of: ", stringify!(m3dm_t))
    );
    assert_eq!(
        ::std::mem::align_of::<m3dm_t>(),
        8usize,
        concat!("Alignment of ", stringify!(m3dm_t))
    );
    fn test_field_name() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dm_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).name) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dm_t),
                "::",
                stringify!(name)
            )
        );
    }
    test_field_name();
    fn test_field_numprop() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dm_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).numprop) as usize - ptr as usize
            },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dm_t),
                "::",
                stringify!(numprop)
            )
        );
    }
    test_field_numprop();
    fn test_field_prop() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dm_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).prop) as usize - ptr as usize
            },
            16usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dm_t),
                "::",
                stringify!(prop)
            )
        );
    }
    test_field_prop();
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct m3df_t {
    pub materialid: M3D_INDEX,
    pub vertex: [M3D_INDEX; 3usize],
    pub normal: [M3D_INDEX; 3usize],
    pub texcoord: [M3D_INDEX; 3usize],
}
#[test]
fn bindgen_test_layout_m3df_t() {
    assert_eq!(
        ::std::mem::size_of::<m3df_t>(),
        40usize,
        concat!("Size of: ", stringify!(m3df_t))
    );
    assert_eq!(
        ::std::mem::align_of::<m3df_t>(),
        4usize,
        concat!("Alignment of ", stringify!(m3df_t))
    );
    fn test_field_materialid() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3df_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).materialid) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(m3df_t),
                "::",
                stringify!(materialid)
            )
        );
    }
    test_field_materialid();
    fn test_field_vertex() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3df_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).vertex) as usize - ptr as usize
            },
            4usize,
            concat!(
                "Offset of field: ",
                stringify!(m3df_t),
                "::",
                stringify!(vertex)
            )
        );
    }
    test_field_vertex();
    fn test_field_normal() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3df_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).normal) as usize - ptr as usize
            },
            16usize,
            concat!(
                "Offset of field: ",
                stringify!(m3df_t),
                "::",
                stringify!(normal)
            )
        );
    }
    test_field_normal();
    fn test_field_texcoord() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3df_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).texcoord) as usize - ptr as usize
            },
            28usize,
            concat!(
                "Offset of field: ",
                stringify!(m3df_t),
                "::",
                stringify!(texcoord)
            )
        );
    }
    test_field_texcoord();
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct m3dvi_t {
    pub count: u16,
    pub name: *mut ::std::os::raw::c_char,
}
#[test]
fn bindgen_test_layout_m3dvi_t() {
    assert_eq!(
        ::std::mem::size_of::<m3dvi_t>(),
        16usize,
        concat!("Size of: ", stringify!(m3dvi_t))
    );
    assert_eq!(
        ::std::mem::align_of::<m3dvi_t>(),
        8usize,
        concat!("Alignment of ", stringify!(m3dvi_t))
    );
    fn test_field_count() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dvi_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).count) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dvi_t),
                "::",
                stringify!(count)
            )
        );
    }
    test_field_count();
    fn test_field_name() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dvi_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).name) as usize - ptr as usize
            },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dvi_t),
                "::",
                stringify!(name)
            )
        );
    }
    test_field_name();
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct m3dvt_t {
    pub name: *mut ::std::os::raw::c_char,
    pub rotation: u8,
    pub voxshape: u16,
    pub materialid: M3D_INDEX,
    pub color: u32,
    pub skinid: M3D_INDEX,
    pub numitem: u8,
    pub item: *mut m3dvi_t,
}
#[test]
fn bindgen_test_layout_m3dvt_t() {
    assert_eq!(
        ::std::mem::size_of::<m3dvt_t>(),
        40usize,
        concat!("Size of: ", stringify!(m3dvt_t))
    );
    assert_eq!(
        ::std::mem::align_of::<m3dvt_t>(),
        8usize,
        concat!("Alignment of ", stringify!(m3dvt_t))
    );
    fn test_field_name() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dvt_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).name) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dvt_t),
                "::",
                stringify!(name)
            )
        );
    }
    test_field_name();
    fn test_field_rotation() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dvt_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).rotation) as usize - ptr as usize
            },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dvt_t),
                "::",
                stringify!(rotation)
            )
        );
    }
    test_field_rotation();
    fn test_field_voxshape() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dvt_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).voxshape) as usize - ptr as usize
            },
            10usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dvt_t),
                "::",
                stringify!(voxshape)
            )
        );
    }
    test_field_voxshape();
    fn test_field_materialid() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dvt_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).materialid) as usize - ptr as usize
            },
            12usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dvt_t),
                "::",
                stringify!(materialid)
            )
        );
    }
    test_field_materialid();
    fn test_field_color() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dvt_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).color) as usize - ptr as usize
            },
            16usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dvt_t),
                "::",
                stringify!(color)
            )
        );
    }
    test_field_color();
    fn test_field_skinid() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dvt_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).skinid) as usize - ptr as usize
            },
            20usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dvt_t),
                "::",
                stringify!(skinid)
            )
        );
    }
    test_field_skinid();
    fn test_field_numitem() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dvt_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).numitem) as usize - ptr as usize
            },
            24usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dvt_t),
                "::",
                stringify!(numitem)
            )
        );
    }
    test_field_numitem();
    fn test_field_item() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dvt_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).item) as usize - ptr as usize
            },
            32usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dvt_t),
                "::",
                stringify!(item)
            )
        );
    }
    test_field_item();
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct m3dvx_t {
    pub name: *mut ::std::os::raw::c_char,
    pub x: i32,
    pub y: i32,
    pub z: i32,
    pub w: u32,
    pub h: u32,
    pub d: u32,
    pub uncertain: u8,
    pub groupid: u8,
    pub data: *mut M3D_VOXEL,
}
